// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infiniteHits() calls twice ReactDOM.render(<Hits props />, container) 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "empty": "ais-infinite-hits__empty",
      "item": "ais-infinite-hits--item",
      "root": "ais-infinite-hits root cx",
      "showmore": "ais-infinite-hits--showmore",
      "showmoreButton": "ais-infinite-hits--showmoreButton",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isLastPage={false}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
    }
  }
  showMore={[Function]}
  showMoreLabel="Show more results"
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() calls twice ReactDOM.render(<Hits props />, container) 2`] = `
<InfiniteHits
  cssClasses={
    Object {
      "empty": "ais-infinite-hits__empty",
      "item": "ais-infinite-hits--item",
      "root": "ais-infinite-hits root cx",
      "showmore": "ais-infinite-hits--showmore",
      "showmoreButton": "ais-infinite-hits--showmoreButton",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isLastPage={false}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
    }
  }
  showMore={[Function]}
  showMoreLabel="Show more results"
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() if it is the last page, then the props should contain isLastPage true 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "empty": "ais-infinite-hits__empty",
      "item": "ais-infinite-hits--item",
      "root": "ais-infinite-hits root cx",
      "showmore": "ais-infinite-hits--showmore",
      "showmoreButton": "ais-infinite-hits--showmoreButton",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isLastPage={false}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
      "nbPages": 2,
      "page": 0,
    }
  }
  showMore={[Function]}
  showMoreLabel="Show more results"
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() if it is the last page, then the props should contain isLastPage true 2`] = `
<InfiniteHits
  cssClasses={
    Object {
      "empty": "ais-infinite-hits__empty",
      "item": "ais-infinite-hits--item",
      "root": "ais-infinite-hits root cx",
      "showmore": "ais-infinite-hits--showmore",
      "showmoreButton": "ais-infinite-hits--showmoreButton",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isLastPage={true}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
      "nbPages": 2,
      "page": 1,
    }
  }
  showMore={[Function]}
  showMoreLabel="Show more results"
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() renders transformed items 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "empty": "ais-infinite-hits__empty",
      "item": "ais-infinite-hits--item",
      "root": "ais-infinite-hits",
      "showmore": "ais-infinite-hits--showmore",
      "showmoreButton": "ais-infinite-hits--showmoreButton",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
        "transformed": true,
      },
    ]
  }
  isLastPage={false}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
          "transformed": true,
        },
      ],
    }
  }
  showMore={[Function]}
  showMoreLabel="Show more results"
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;
